--- a/drafttrainer/langs/translation-zh.json
+++ b/drafttrainer/langs/translation-zh.json
@@ -4,31 +4,31 @@
     "global.leaderboard": "排行榜",
     "global.language_select": "语言选择",
     "global.continue": "下一步",
-    "login.prompt.performance_and_leaderboard": "Login to track your performance and to earn a place on the global leaderboard!",
+    "login.prompt.performance_and_leaderboard": "登陆以便跟踪您的表现并可在全球排行榜获得一席之地",
     "global.login": "登录",
     "global.skip": "跳过",
-    "login.prompt.rank_selected": "Log in to have your rank automatically selected",
-    "turbo.rules.hero_number": "6 heroes per draft phase",
-    "turbo.rules.fifteen_bans": "15 random bans before draft",
-    "turbo.rules.lanes_changed_no": "Lanes can’t be changed",
-    "captain.rules.hero_number": "All heroes available every draft phase",
-    "captain.rules.lanes_changed_yes": "Lanes can be changed",
-    "draft.type.quick": "Quick Draft",
-    "draft.type.normal": "Normal Draft",
-    "coin.flip.player_order": "Flip the coin to see who goes first",
+    "login.prompt.rank_selected": "登陆以便自动选择您的排名",
+    "turbo.rules.hero_number": "有6名英雄角色选择",
+    "turbo.rules.fifteen_bans": "选角色前会有15次随机英雄禁用",
+    "turbo.rules.lanes_changed_no": "路线不可更改",
+    "captain.rules.hero_number": "所有英雄都出现在每个选角阶段",
+    "captain.rules.lanes_changed_yes": "路线可更改",
+    "draft.type.quick": "快速",
+    "draft.type.normal": "普通",
+    "coin.flip.player_order": "扔钱币决定先后",
     "coin.flip.player_win": "你赢了！",
     "coin.flip.player_lose": "你输了！",
-    "coin.flip.faction_or_pick": "Choose faction or pick order.",
-    "coin.flip.bot_choice": "Stratz AI chooses first.",
+    "coin.flip.faction_or_pick": "选择阵营或者指令",
+    "coin.flip.bot_choice": "STRATZ人工智能优先选择",
     "global.pick": "挑选",
-    "global.or": "Or",
-    "global.faction": "Faction",
+    "global.or": "或者",
+    "global.faction": "阵营",
     "global.first_pick": "率先选人",
     "global.second_pick":"后手选人",
     "global.radiant": "天辉",
     "global.dire": "夜魔",
     "global.player_turn": "轮到你了",
-    "global.win_chance": "Win chance",
+    "global.win_chance": "赢的机会",
     "global.strength": "力量",
     "global.agility": "敏捷",
     "global.intelligence": "智力",
@@ -37,8 +37,8 @@
     "global.lock_in": "选择",
     "global.ban": "禁用",
     "global.ban_phase": "禁用阶段",
-    "captain.lane_selection": "Pick your Lanes",
-    "captain.drag_and_drop": "Drag and Drop",
+    "captain.lane_selection": "选择您的路线",
+    "captain.drag_and_drop": "拖放",
     "global.support": "辅助",
     "global.core": "核心",
     "lanes.safe_lane": "优势路",
@@ -46,33 +46,31 @@
     "lanes.off_lane": "劣势路",
     "lanes.jungle": "打野",
     "lanes.roaming": "游走",
-    "win.chance.calculation": "Calculating win chance",
+    "win.chance.calculation": "赢面计算",
     "global.early": "前期装备",
     "global.middle": "中期",
     "global.late": "后期",
     "global.overall": "整体",
-    "draft.complete": "Draft Complete",
-    "winner.with_percentage": "STRATZ AI wins with 74.8%!",
+    "draft.complete": "初始阶段完成",
+    "winner.with_percentage": "STRATZ 人工智能以74.8%获胜",
     "lanes.top.short": "上路",
     "lanes.middle.short": "中路",
     "lanes.bottom.short": "下路",
-    "match.likely_end_time": "This match is most likely to end between 25:00 and 32:00.",
-    "chart.header.lane_advantage": "Lane Advantage",
-    "chart.header.team_status": "Team Status",
+    "match.likely_end_time": "这场比赛可能会在25到32之间结束",
+    "chart.header.lane_advantage": "路线优势",
+    "chart.header.team_status": "团队状态",
     "hero.damage_type.magical": "魔法",
     "hero.damage_type.pure": "纯粹",
     "global.buildings": "建筑",
     "hero.stats.health": "生命值",
-    "global.heal": "加血",
+    "global.heal": "治疗",
     "draft.team_status.stun": "上去控",
     "draft.team_status.disable": "用一个技能控制",
     "draft.team_status.slow": "减速效果",
     "draft.team_status.dispel": "驱散",
-    "draft.team_status.dpd": "Damage per Death",
+    "draft.team_status.dpd": "每次死亡伤害",
     "hero.damage_type.physical": "物理",
     "global.logout": "登出",
     "global.builds": "攻略",
-    "global.play_again": "再玩一次",
-    "promo.text.you_vs_ai": "THINK YOU CAN DRAFT BETTER THAN AN AI?",
-    "promo.text.play_our_game": "Play our drafting minigame to find out!"
+    "global.play_again": "再玩一次"
 }
