--- a/drafttrainer/langs/translation-en.json
+++ b/drafttrainer/langs/translation-en.json
@@ -25,8 +25,8 @@
     "global.faction": "Faction",
     "global.first_pick": "First Pick",
     "global.second_pick": "Second Pick",
-    "global.radiant": "Radiant",
-    "global.dire": "Dire",
+    "faction.radiant": "Radiant",
+    "faction.dire": "Dire",
     "global.player_turn": "Your Turn",
     "global.win_chance": "Win chance",
     "global.strength": "Strength",
